stack_overflow icon fix

--- a/static/style.css
+++ b/static/style.css
@@ -129,7 +129,7 @@ a {
     background-image:url('/static/img/icon-github.png');
 }
 
-.so_icon{
+.stack_overflow_icon{
     background-image:url('/static/img/icon-stack-overflow.png');
 }
 
